main.css: fix z-index of main toolbar

--- a/client/app/assets/css/main.css
+++ b/client/app/assets/css/main.css
@@ -54,4 +54,6 @@ pre {
 #main-toolbar {
     height: 23px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.16);
+    z-index: 2;
+    position: relative;
 }
